All GET tests pass. Sorting fixed.

--- a/src/views/board.html
+++ b/src/views/board.html
@@ -38,8 +38,7 @@
         $.ajax({
           type: "GET",
           url: url,
-          success: function(data)
-          {
+          success: function(data) {
             var boardThreads= [];
             //
             // THIS ARRAY SET UP IS FOR CODE READABILITIES AND TESTING!
